--- a/calculator.css
+++ b/calculator.css
@@ -1,3 +1,30 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+
+.container{
+    width: 100%;
+    height: 100vh;
+    background: #ffb178 ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calculator{
+    background: #243441;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.circle-name {
+    color: #fff;
+    margin: 15px 15px 0;
+}
+
 form.display{
     display: flex;
     justify-content: flex-end;
