--- a/calculator.css
+++ b/calculator.css
@@ -25,12 +25,26 @@
     margin: 15px 15px 0;
 }
 
+.calculator form input{
+    border: 0;
+    outline: 0;
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    box-shadow: -5px -10px 10px rgba(255, 255, 255, 0.1),5px 1px 5px rgba(0, 0, 0, 0.2);
+    background: transparent;
+    font-size: 20px;
+    color: #fff;
+    cursor: pointer;
+    margin: 10px;
+}
+
 form.display{
     display: flex;
     justify-content: flex-end;
     margin: 20px 0;
     background-color: #f0f0f0;
-    border-radius: 15px;
+    border-radius: 60px;
 
 }
 form.display input{
