--- a/calculator.css
+++ b/calculator.css
@@ -58,6 +58,12 @@ form input.equal {
     width: 145px;
     background-color: #ffb178;
 }
+
+form input.equal_operator {
+    width: 145px;
+    color: #272829;
+    background-color: #FFB178;
+}
 form input.operator {
     color: #ffb178;
 }
