--- a/calculator.css
+++ b/calculator.css
@@ -14,15 +14,26 @@
     justify-content: center;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+
+.container{
+    width: 100%;
+    height: 100vh;
+    background: #FFB178;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .calculator{
     background: #243441;
     padding: 20px;
-    border-radius: 10px;
-}
-
-.circle-name {
-    color: #fff;
-    margin: 15px 15px 0;
+    border-radius: 60px;
 }
 
 .calculator form input{
@@ -39,25 +50,42 @@
     margin: 10px;
 }
 
-form.display{
+form .display{
     display: flex;
     justify-content: flex-end;
     margin: 20px 0;
-    background-color: #f0f0f0;
-    border-radius: 60px;
-
+    background-color: #F0F0F0;
+    border-radius: 15px;
 }
-form.display input{
+
+form .display input{
     text-align: right;
     flex: 1;
     font-size: 45px;
     box-shadow: none;
     color: #272829;
 }
-form input.equal {
+form input.equal{
     width: 145px;
-    background-color: #ffb178;
+    color: #272829;
+    background-color: #FFB178;
 }
-form input.operator {
-    color: #ffb178;
+
+form input.operator{
+    color: #FFB178;
+
 }
+form input.equal_operator {
+    width: 145px;
+    color: #272829;
+    background-color: #FFB178;
+}
+
+.circle-name {
+    color: #fff;
+    margin: 15px 15px 0;
+}
+
+
+
+
